@@ -15094,7 +15094,7 @@
       <source>SOTG</source>
       <page>9</page>
       <underbarrels>
-        <underbarrel>Kanonenschlag (Melee)</underbarrel>
+        <underbarrel>Cannon Shot (Melee)</underbarrel>
       </underbarrels>
     </weapon>
     <weapon>
